--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,44 @@
-torchvision>=0.5.0
-pretrainedmodels==0.7.4
+albumentations==1.0.3
+certifi==2022.9.24
+charset-normalizer==2.1.1
+click==8.1.3
+docker-pycreds==0.4.0
 efficientnet-pytorch==0.6.3
+gitdb==4.0.9
+GitPython==3.1.29
+idna==3.4
+imageio==2.22.3
+munch==2.5.0
+networkx==2.8.8
+numpy==1.23.4
+nvidia-cublas-cu11==11.10.3.66
+nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cudnn-cu11==8.5.0.96
+opencv-python-headless==4.6.0.66
+packaging==21.3
+pathtools==0.1.2
+Pillow==9.3.0
+pretrainedmodels==0.7.4
+promise==2.3
+protobuf==4.21.9
+psutil==5.9.3
+pyparsing==3.0.9
+PyWavelets==1.4.1
+PyYAML==6.0
+requests==2.28.1
+scikit-image==0.19.3
+scipy==1.9.3
+sentry-sdk==1.10.1
+setproctitle==1.3.2
+shortuuid==1.0.9
+six==1.16.0
+smmap==5.0.0
+tifffile==2022.10.10
 timm==0.4.12
-albumentations>=1.0.0,<=1.0.3
+torch==1.13.0
+torchvision==0.14.0
+tqdm==4.64.1
+typing_extensions==4.4.0
+urllib3==1.26.12
+wandb==0.13.5
